--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -38,26 +38,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV data extraction successful.\n",
-      "CSV data extraction successful.\n"
+      "Parquet data extraction successful.\n"
      ]
     }
    ],
    "source": [
-    "df_train = extract(\"dataframes/df_train.csv\")\n",
-    "df_test = extract(\"dataframes/df_test.csv\")"
+    "df_train = extract(\"dataframes/df_train.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -71,9 +69,9 @@
       "\n",
       "---Dataframe head:\n",
       "   PassengerId  Survived  Pclass                                                 Name     Sex   Age  SibSp  Parch            Ticket     Fare Cabin Embarked\n",
-      "0            1         0       3                              Braund, Mr. Owen Harris    male  22.0      1      0         A/5 21171   7.2500   NaN        S\n",
+      "0            1         0       3                              Braund, Mr. Owen Harris    male  22.0      1      0         A/5 21171   7.2500  None        S\n",
       "1            2         1       1  Cumings, Mrs. John Bradley (Florence Briggs Thayer)  female  38.0      1      0          PC 17599  71.2833   C85        C\n",
-      "2            3         1       3                               Heikkinen, Miss. Laina  female  26.0      0      0  STON/O2. 3101282   7.9250   NaN        S\n",
+      "2            3         1       3                               Heikkinen, Miss. Laina  female  26.0      0      0  STON/O2. 3101282   7.9250  None        S\n",
       "\n",
       "---Dataframe info:\n",
       "\n",
@@ -121,69 +119,12 @@
       "Fare             0\n",
       "Cabin          687\n",
       "Embarked         2\n",
-      "dtype: int64\n",
-      "\n",
-      "---Info-test-data---------------------------------------------\n",
-      "---Duplicated values: 0\n",
-      "---Fully empty rows: 0\n",
-      "\n",
-      "---Dataframe head:\n",
-      "   PassengerId  Pclass                              Name     Sex   Age  SibSp  Parch  Ticket    Fare Cabin Embarked\n",
-      "0          892       3                  Kelly, Mr. James    male  34.5      0      0  330911  7.8292   NaN        Q\n",
-      "1          893       3  Wilkes, Mrs. James (Ellen Needs)  female  47.0      1      0  363272  7.0000   NaN        S\n",
-      "2          894       2         Myles, Mr. Thomas Francis    male  62.0      0      0  240276  9.6875   NaN        Q\n",
-      "\n",
-      "---Dataframe info:\n",
-      "\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 418 entries, 0 to 417\n",
-      "Data columns (total 11 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   PassengerId  418 non-null    int64  \n",
-      " 1   Pclass       418 non-null    int64  \n",
-      " 2   Name         418 non-null    object \n",
-      " 3   Sex          418 non-null    object \n",
-      " 4   Age          332 non-null    float64\n",
-      " 5   SibSp        418 non-null    int64  \n",
-      " 6   Parch        418 non-null    int64  \n",
-      " 7   Ticket       418 non-null    object \n",
-      " 8   Fare         417 non-null    float64\n",
-      " 9   Cabin        91 non-null     object \n",
-      " 10  Embarked     418 non-null    object \n",
-      "dtypes: float64(2), int64(4), object(5)\n",
-      "memory usage: 36.1+ KB\n",
-      "\n",
-      "----Dataframe description:\n",
-      "       PassengerId      Pclass         Age       SibSp       Parch        Fare\n",
-      "count   418.000000  418.000000  332.000000  418.000000  418.000000  417.000000\n",
-      "mean   1100.500000    2.265550   30.272590    0.447368    0.392344   35.627188\n",
-      "std     120.810458    0.841838   14.181209    0.896760    0.981429   55.907576\n",
-      "min     892.000000    1.000000    0.170000    0.000000    0.000000    0.000000\n",
-      "25%     996.250000    1.000000   21.000000    0.000000    0.000000    7.895800\n",
-      "50%    1100.500000    3.000000   27.000000    0.000000    0.000000   14.454200\n",
-      "75%    1204.750000    3.000000   39.000000    1.000000    0.000000   31.500000\n",
-      "max    1309.000000    3.000000   76.000000    8.000000    9.000000  512.329200\n",
-      "\n",
-      "---Missing values:\n",
-      "PassengerId      0\n",
-      "Pclass           0\n",
-      "Name             0\n",
-      "Sex              0\n",
-      "Age             86\n",
-      "SibSp            0\n",
-      "Parch            0\n",
-      "Ticket           0\n",
-      "Fare             1\n",
-      "Cabin          327\n",
-      "Embarked         0\n",
       "dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "df_info(df_train,\"train data\")\n",
-    "df_info(df_test, \"test data\")"
+    "df_info(df_train,\"train data\")"
    ]
   }
  ],
