--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -9,7 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,44 +27,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n"
+      "Already installed: scikit-learn\n",
+      "\n",
+      "Error importing scikit-learn: Is it installed?\n"
      ]
     }
    ],
    "source": [
-    "#packages = [\"pandas\", \"gzip\", \"json\",\"ast\"]\n",
-    "packages = []\n",
+    "packages = [\"scikit-learn\"]\n",
     "install(packages)\n",
     "import_packages(packages)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Parquet data extraction successful.\n",
       "Parquet data extraction successful.\n"
      ]
     }
    ],
    "source": [
-    "df_train = extract(\"dataframes/df_train.parquet\")"
+    "df_train = extract(\"dataframes/df_train.parquet\")\n",
+    "df_test = extract(\"dataframes/df_test.parquet\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -68,32 +80,29 @@
       "---Fully empty rows: 0\n",
       "\n",
       "---Dataframe head:\n",
-      "   PassengerId  Survived  Pclass                                                 Name     Sex   Age  SibSp  Parch            Ticket     Fare Cabin Embarked\n",
-      "0            1         0       3                              Braund, Mr. Owen Harris    male  22.0      1      0         A/5 21171   7.2500  None        S\n",
-      "1            2         1       1  Cumings, Mrs. John Bradley (Florence Briggs Thayer)  female  38.0      1      0          PC 17599  71.2833   C85        C\n",
-      "2            3         1       3                               Heikkinen, Miss. Laina  female  26.0      0      0  STON/O2. 3101282   7.9250  None        S\n",
+      "   PassengerId  Survived  Pclass     Sex   Age  SibSp  Parch     Fare Embarked\n",
+      "0            1         0       3    male  22.0      1      0   7.2500        S\n",
+      "1            2         1       1  female  38.0      1      0  71.2833        C\n",
+      "2            3         1       3  female  26.0      0      0   7.9250        S\n",
       "\n",
       "---Dataframe info:\n",
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 891 entries, 0 to 890\n",
-      "Data columns (total 12 columns):\n",
+      "Data columns (total 9 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
       " 0   PassengerId  891 non-null    int64  \n",
       " 1   Survived     891 non-null    int64  \n",
       " 2   Pclass       891 non-null    int64  \n",
-      " 3   Name         891 non-null    object \n",
-      " 4   Sex          891 non-null    object \n",
-      " 5   Age          714 non-null    float64\n",
-      " 6   SibSp        891 non-null    int64  \n",
-      " 7   Parch        891 non-null    int64  \n",
-      " 8   Ticket       891 non-null    object \n",
-      " 9   Fare         891 non-null    float64\n",
-      " 10  Cabin        204 non-null    object \n",
-      " 11  Embarked     889 non-null    object \n",
-      "dtypes: float64(2), int64(5), object(5)\n",
-      "memory usage: 83.7+ KB\n",
+      " 3   Sex          891 non-null    object \n",
+      " 4   Age          714 non-null    float64\n",
+      " 5   SibSp        891 non-null    int64  \n",
+      " 6   Parch        891 non-null    int64  \n",
+      " 7   Fare         891 non-null    float64\n",
+      " 8   Embarked     889 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(2)\n",
+      "memory usage: 62.8+ KB\n",
       "\n",
       "----Dataframe description:\n",
       "       PassengerId    Survived      Pclass         Age       SibSp       Parch        Fare\n",
@@ -110,14 +119,11 @@
       "PassengerId      0\n",
       "Survived         0\n",
       "Pclass           0\n",
-      "Name             0\n",
       "Sex              0\n",
       "Age            177\n",
       "SibSp            0\n",
       "Parch            0\n",
-      "Ticket           0\n",
       "Fare             0\n",
-      "Cabin          687\n",
       "Embarked         2\n",
       "dtype: int64\n"
      ]
@@ -125,6 +131,37 @@
    ],
    "source": [
     "df_info(df_train,\"train data\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CSV data extraction successful.\n",
+      "Your submission was successfully saved!\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_test = extract(\"Raw data/test.csv\")\n",
+    "y = df_train[\"Survived\"]\n",
+    "\n",
+    "features = [\"Pclass\", \"Sex\", \"SibSp\", \"Parch\"]\n",
+    "X = pd.get_dummies(df_train[features])\n",
+    "X_test = pd.get_dummies(df_test[features])\n",
+    "\n",
+    "model = RandomForestClassifier(n_estimators=100, max_depth=5, random_state=1)\n",
+    "model.fit(X, y)\n",
+    "predictions = model.predict(X_test)\n",
+    "\n",
+    "output = pd.DataFrame({'PassengerId': df_test.PassengerId, 'Survived': predictions})\n",
+    "output.to_csv('submission.csv', index=False)\n",
+    "print(\"Your submission was successfully saved!\")"
    ]
   }
  ],
