--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,37 +18,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from Data_science_utils import *"
+    "from data_essentials_utils import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['scikit-learn']\n",
       "Already installed: scikit-learn\n",
       "\n",
-      "Error importing scikit-learn: Is it installed?\n"
+      "['scikit-learn']\n",
+      "Error importing scikit-learn: Is it installed?\n",
+      "['scikit-learn']\n"
      ]
     }
    ],
    "source": [
     "packages = [\"scikit-learn\"]\n",
-    "install(packages)\n",
+    "print(packages)\n",
+    "install_packages(packages)\n",
+    "print(packages)\n",
+    "import_packages(packages)\n",
+    "print(packages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['scikit-learn']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(packages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error importing scikit-learn: Is it installed?\n"
+     ]
+    }
+   ],
+   "source": [
     "import_packages(packages)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -79,63 +119,65 @@
       "---Duplicated values: 0\n",
       "---Fully empty rows: 0\n",
       "\n",
-      "---Dataframe head:\n",
-      "   PassengerId  Survived  Pclass     Sex   Age  SibSp  Parch     Fare Embarked\n",
-      "0            1         0       3    male  22.0      1      0   7.2500        S\n",
-      "1            2         1       1  female  38.0      1      0  71.2833        C\n",
-      "2            3         1       3  female  26.0      0      0   7.9250        S\n",
-      "\n",
       "---Dataframe info:\n",
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 891 entries, 0 to 890\n",
-      "Data columns (total 9 columns):\n",
+      "RangeIndex: 889 entries, 0 to 888\n",
+      "Data columns (total 10 columns):\n",
       " #   Column       Non-Null Count  Dtype  \n",
       "---  ------       --------------  -----  \n",
-      " 0   PassengerId  891 non-null    int64  \n",
-      " 1   Survived     891 non-null    int64  \n",
-      " 2   Pclass       891 non-null    int64  \n",
-      " 3   Sex          891 non-null    object \n",
-      " 4   Age          714 non-null    float64\n",
-      " 5   SibSp        891 non-null    int64  \n",
-      " 6   Parch        891 non-null    int64  \n",
-      " 7   Fare         891 non-null    float64\n",
+      " 0   PassengerId  889 non-null    int64  \n",
+      " 1   Survived     889 non-null    int64  \n",
+      " 2   Pclass       889 non-null    int64  \n",
+      " 3   Sex          889 non-null    object \n",
+      " 4   Age          889 non-null    float64\n",
+      " 5   SibSp        889 non-null    int64  \n",
+      " 6   Parch        889 non-null    int64  \n",
+      " 7   Fare         889 non-null    float64\n",
       " 8   Embarked     889 non-null    object \n",
-      "dtypes: float64(2), int64(5), object(2)\n",
-      "memory usage: 62.8+ KB\n",
-      "\n",
-      "----Dataframe description:\n",
-      "       PassengerId    Survived      Pclass         Age       SibSp       Parch        Fare\n",
-      "count   891.000000  891.000000  891.000000  714.000000  891.000000  891.000000  891.000000\n",
-      "mean    446.000000    0.383838    2.308642   29.699118    0.523008    0.381594   32.204208\n",
-      "std     257.353842    0.486592    0.836071   14.526497    1.102743    0.806057   49.693429\n",
-      "min       1.000000    0.000000    1.000000    0.420000    0.000000    0.000000    0.000000\n",
-      "25%     223.500000    0.000000    2.000000   20.125000    0.000000    0.000000    7.910400\n",
-      "50%     446.000000    0.000000    3.000000   28.000000    0.000000    0.000000   14.454200\n",
-      "75%     668.500000    1.000000    3.000000   38.000000    1.000000    0.000000   31.000000\n",
-      "max     891.000000    1.000000    3.000000   80.000000    8.000000    6.000000  512.329200\n",
+      " 9   Age_missing  889 non-null    int64  \n",
+      "dtypes: float64(2), int64(6), object(2)\n",
+      "memory usage: 69.6+ KB\n",
       "\n",
       "---Missing values:\n",
-      "PassengerId      0\n",
-      "Survived         0\n",
-      "Pclass           0\n",
-      "Sex              0\n",
-      "Age            177\n",
-      "SibSp            0\n",
-      "Parch            0\n",
-      "Fare             0\n",
-      "Embarked         2\n",
-      "dtype: int64\n"
+      "PassengerId    0\n",
+      "Survived       0\n",
+      "Pclass         0\n",
+      "Sex            0\n",
+      "Age            0\n",
+      "SibSp          0\n",
+      "Parch          0\n",
+      "Fare           0\n",
+      "Embarked       0\n",
+      "Age_missing    0\n",
+      "dtype: int64\n",
+      "\n",
+      "---Dataframe head:\n",
+      "   PassengerId  Survived  Pclass     Sex   Age  SibSp  Parch     Fare Embarked  Age_missing\n",
+      "0            1         0       3    male  22.0      1      0   7.2500        S            0\n",
+      "1            2         1       1  female  38.0      1      0  71.2833        C            0\n",
+      "2            3         1       3  female  26.0      0      0   7.9250        S            0\n",
+      "\n",
+      "----Dataframe description:\n",
+      "       PassengerId    Survived      Pclass         Age       SibSp       Parch        Fare  Age_missing\n",
+      "count   889.000000  889.000000  889.000000  889.000000  889.000000  889.000000  889.000000   889.000000\n",
+      "mean    446.000000    0.382452    2.311586   29.653622    0.524184    0.382452   32.096681     0.199100\n",
+      "std     256.998173    0.486260    0.834700   12.968367    1.103705    0.806761   49.697504     0.399548\n",
+      "min       1.000000    0.000000    1.000000    0.420000    0.000000    0.000000    0.000000     0.000000\n",
+      "25%     224.000000    0.000000    2.000000   22.000000    0.000000    0.000000    7.895800     0.000000\n",
+      "50%     446.000000    0.000000    3.000000   29.700000    0.000000    0.000000   14.454200     0.000000\n",
+      "75%     668.000000    1.000000    3.000000   35.000000    1.000000    0.000000   31.000000     0.000000\n",
+      "max     891.000000    1.000000    3.000000   80.000000    8.000000    6.000000  512.329200     1.000000\n"
      ]
     }
    ],
    "source": [
-    "df_info(df_train,\"train data\")"
+    "info(df_train,\"train data\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +223,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
