--- a/ETL.ipynb
+++ b/ETL.ipynb
@@ -10,7 +10,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
+   "id": "09b13e3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (2.3.1)\n",
+      "Requirement already satisfied: seaborn in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (0.13.2)\n",
+      "Requirement already satisfied: pyarrow in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (21.0.0)\n",
+      "Requirement already satisfied: numpy>=1.22.4 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from pandas) (2.2.6)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: matplotlib!=3.6.1,>=3.4 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from seaborn) (3.10.3)\n",
+      "Requirement already satisfied: contourpy>=1.0.1 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.3.2)\n",
+      "Requirement already satisfied: cycler>=0.10 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (0.12.1)\n",
+      "Requirement already satisfied: fonttools>=4.22.0 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (4.59.0)\n",
+      "Requirement already satisfied: kiwisolver>=1.3.1 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (1.4.8)\n",
+      "Requirement already satisfied: packaging>=20.0 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (25.0)\n",
+      "Requirement already satisfied: pillow>=8 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (11.3.0)\n",
+      "Requirement already satisfied: pyparsing>=2.3.1 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from matplotlib!=3.6.1,>=3.4->seaborn) (3.2.3)\n",
+      "Requirement already satisfied: six>=1.5 in d:\\dev\\titanic_competition\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install pandas seaborn pyarrow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "9719e222",
    "metadata": {},
    "outputs": [],
@@ -20,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "id": "d727a3c3",
    "metadata": {},
    "outputs": [
@@ -28,17 +61,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already installed: pyarrow\n",
-      "\n",
-      "pyarrow imported as pa\n"
+      "\n"
      ]
     }
    ],
    "source": [
-    "'''\n",
-    "Pyarrow needed for parquet files\n",
-    "'''\n",
-    "packages = [\"pyarrow\"]\n",
+    "packages = []\n",
     "desu.install_packages(packages)\n",
     "desu.import_packages(packages)"
    ]
@@ -53,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 19,
    "id": "bfb13231",
    "metadata": {},
    "outputs": [
@@ -61,8 +89,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CSV data extraction successful.\n",
-      "CSV data extraction successful.\n"
+      "CSV train data extraction successful.\n",
+      "CSV test data extraction successful.\n"
      ]
     }
    ],
@@ -81,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "id": "68bf4ccb",
    "metadata": {},
    "outputs": [
@@ -164,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "id": "65ab26c4",
    "metadata": {},
    "outputs": [
@@ -174,7 +202,7 @@
        "\"Column 'Age' has been filled with the mean value: 29.70. Column: 'Age_missing' has been created.\""
       ]
      },
-     "execution_count": 71,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "id": "5a0a8d3f",
    "metadata": {},
    "outputs": [],
@@ -195,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "id": "dd3bdffe",
    "metadata": {},
    "outputs": [],
@@ -221,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "id": "2eafe2ca",
    "metadata": {},
    "outputs": [
@@ -265,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 10,
    "id": "fdaaaf1c",
    "metadata": {},
    "outputs": [
@@ -322,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 12,
    "id": "f5661b16",
    "metadata": {},
    "outputs": [],
@@ -342,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "id": "366fcd87",
    "metadata": {},
    "outputs": [],
@@ -368,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "id": "b145acd6",
    "metadata": {},
    "outputs": [
@@ -791,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "id": "5388a625",
    "metadata": {},
    "outputs": [
@@ -1143,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 16,
    "id": "bc7465c7",
    "metadata": {},
    "outputs": [
@@ -1189,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 17,
    "id": "85f47f65-1619-4e26-849b-5874ba841e4c",
    "metadata": {},
    "outputs": [],
